perbaikan alamat gambar

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <h2 class="title">About Us</h2>
     <div class="about-container">
       <div class="about-image">
-        <img src="./image/about.jpg" alt="about">
+        <img src="image/about.jpg" alt="about">
       </div>
       <div class="about-text">
         <h3>Why choose our coffee?</h3>
@@ -185,7 +185,7 @@
     <div class="modal-container">
       <a href="" class="close-btn"><i class="bi bi-x"></i></a>
       <div class="modal-image">
-        <img src="./image/product1.jpg" alt="">
+        <img src="image/product1.jpg" alt="">
       </div>
       <div class="modal-text">
         <h3>Product 1</h3>
